[project]
name = "carto_healthspot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mauro Faccin", email = "mauro.fccn@gmail.com"},
]
dependencies = [
    "affine>=2.4.0",
    "click>=8.1.7",
    "xdg-base-dirs>=6.0.0",
    "numpy>=1.26.4",
    "rasterio>=1.3.10",
    "geojson>=3.1.0",
    "pyproj>=3.6.1",
    "toml>=0.10.2",
    "matplotlib>=3.9.0",
    "scipy>=1.13.1",
    "shapely>=2.0.4",
    "pillow>=10.3.0",
    "geopandas>=0.14.4",
    "tqdm>=4.66.4",
    "overpass>=0.7",
    "h3ronpy>=0.20.2",
    "folium>=0.16.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
carto_healthspot = "carto_healthspot.__main__:cli"
cartohs = "carto_healthspot.__main__:cli"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
