[metadata]
name = CartoTB
version = 0.1.0
author = Mauro Faccin,
author_email = mauro.fccn@gmail.com
license = MIT
description = Carto Healthspots: a tool to mat a disease incidence hotspots
keywords = disease, health, map, estimation
url = https://maurofaccin.github.io/cartotb
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True

[options.packages.find]
include =
    carto_healthspot
exclude =
    tests

[options.package_data]
carto_healthspot =
    py.typed
